--- a/web/about.html
+++ b/web/about.html
@@ -32,16 +32,17 @@
     </nav>
     
     <div class="jumbotron", align="center">
-        <h1>About iS</h1>
-		<h2> All of UIUC websites combined into one!</h2>
+        <h1>About illiniStudent</h1>
+		<h2> All of UIUC websites organized and made simple for you!</h2>
 		<apage>
 		Remember working on that assignment on Compass2g? <br>
-		Then you need to check your homework on Moodle,<br>
-		but since they are independent websites,<br>
+		Then you realize you need to check your homework<br>
+		on Moodle but since they are independent websites,<br>
 		you need to go to Moodle on a separate tab, and<br>
 		then log in to check the homework. In comes	illiniStudent,<br>
 		a student made website aimed to ease the lives of<br>
-		each student through integration of the	UIUC websites<br>
+		students through one simple login of NetID and Password<br>
+		to access an integration of the	UIUC websites<br>
 		and an interactive calendar to remind you of upcoming<br>
 		homework that is due.
         </apage>
