--- a/web/Home.html
+++ b/web/Home.html
@@ -43,7 +43,10 @@
             <div class="form-group">
             <input class="form-control" type="text" placeholder="Password"></input>
             </div>
+            <!--delete line 47 and 49 after presentation-->
+            <a href="Main.html">
             <button type="button" class="btn btn-success btn-block">Submit</button>
+            </a>
         </div>
     </div>
     </div>
