--- a/web/Home.html
+++ b/web/Home.html
@@ -20,11 +20,11 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="home.html">illiniStudent</a>
+                <a class="navbar-brand" href="Home.html">illiniStudent</a>
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="About.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="help.html">Help</a></li>
                 <li><a href="#">Supported Sites</a></li>
             </ul>
