--- a/web/Main.html
+++ b/web/Main.html
@@ -28,6 +28,12 @@
 
     $('#calendar').fullCalendar({
         // put your options and callbacks here
+        header:{
+            left:'prev,next today',
+            center:'title',
+            right:'month,agendaWeek,agendaDay'
+        },
+        
         events:[
             {
                 title:'CS125 MP4',
