--- a/web/Main.html
+++ b/web/Main.html
@@ -66,6 +66,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Resources</a></li>
+                <li><a href="Profile.html">Profile</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="Home.html">Log Out</a></li>
             </ul>
