Calendar style fix
Changed size of calendar buttons, centered text, changed font size

--- a/web/Main.html
+++ b/web/Main.html
@@ -63,7 +63,7 @@
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Resources</a></li>
                 <li><a href="Profile.html">Profile</a></li>
@@ -73,9 +73,9 @@
         </div>
          </div>
     </nav>
-        <div class="page-header">
+        <!--div class="page-header">
         <h2 align="middle">Calendar</h2>
-        </div>
+        </div-->
     
     <div id='calendar'></div>
     
