Modified events and inputs

--- a/web/Home.html
+++ b/web/Home.html
@@ -38,10 +38,10 @@
     <div class="container">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Email"></input>
+            <input class="form-control" type="text" placeholder="Email" id="Email"></input>
             </div>
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Password"></input>
+            <input class="form-control" type="text" placeholder="Password" id="Password"></input>
             </div>
             <!--delete line 47 and 49 after presentation-->
             <a href="Main.html">
@@ -56,13 +56,13 @@
         <h2 align="center">Sign up below!</h2>
         <div class="col-sm-4 col-sm-offset-4">
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Name"></input>
+            <input class="form-control" type="text" placeholder="Name" id="newName"></input>
             </div>
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Email"></input>
+            <input class="form-control" type="text" placeholder="Email" id="newEmail"></input>
             </div>
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Password"></input>
+            <input class="form-control" type="text" placeholder="Password" id="newPassword"></input>
             </div>
             <button type="button" class="btn btn-danger btn-block">Sign Up!</button>
         </div>
