--- a/web/Main.html
+++ b/web/Main.html
@@ -38,6 +38,10 @@
             {
                 title:'CS125 MP4',
                 start:'2015-03-09'
+            },
+            {
+                title:'CS125 MP5',
+                start:'2015-04-13'
             }
         ]
         
