--- a/web/Home.html
+++ b/web/Home.html
@@ -25,7 +25,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="about.html">About</a></li>
-                <li><a href="help.html">Help</a></li>
+                <li><a href="#">Help</a></li>
                 <li><a href="#">Supported Sites</a></li>
             </ul>
         </div>
