--- a/web/Resources.html
+++ b/web/Resources.html
@@ -39,7 +39,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="http://illinois.edu" target="iframe_a">Illinois</a></li>
-                <li><a href="http://g.illinois.edu" target="iframe_a">Email</a></li>
+                <li><a href="http://g.illinois.edu" target="_blank">Email</a></li>
                 <li><a href="https://piazza.com" target="iframe_a">Piazza</a></li>
                 <li><a href="https://compass2g.illinois.edu" target="iframe_a">Compass2g</a></li>
                 <li><a href="https://lon-capa.illinois.edu" target="iframe_a">Lon-Capa</a></li>
