--- a/web/Home.html
+++ b/web/Home.html
@@ -41,7 +41,7 @@ $("#sign-up").click(function() {
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="Help.html">Help</a></li>
                 <li><a href="#">Supported Sites</a></li>
             </ul>
         </div>
@@ -89,5 +89,5 @@ $("#sign-up").click(function() {
     <div class="container">
     </div>
 
-	</body>
+</body>
 </html>
