--- a/web/about.html
+++ b/web/about.html
@@ -25,7 +25,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="about.html">About</a></li>
-                <li><a href="help.html"">Help</a></li>
+                <li><a href="Help.html"">Help</a></li>
                 <li><a href="#">Supported Sites</a></li>
             </ul>
         </div>
@@ -33,19 +33,34 @@
     
     <div class="jumbotron", align="center">
         <h1>About illiniStudent</h1>
-		<h2> All of UIUC websites organized and made simple for you!</h2>
-		<apage>
-		Remember working on that assignment on Compass2g? <br>
-		Then you realize you need to check your homework<br>
-		on Moodle but since they are independent websites,<br>
-		you need to go to Moodle on a separate tab, and<br>
-		then log in to check the homework. In comes	illiniStudent,<br>
-		a student made website aimed to ease the lives of<br>
-		students through one simple login of NetID and Password<br>
-		to access an integration of the	UIUC websites<br>
-		and an interactive calendar to remind you of upcoming<br>
-		homework that is due.
-        </apage>
+		<h2> All of UIUC websites organized and made simple for you!<br></h2>
+		
+		<h3 id="about2">
+		<div id="about1"><br>What is illiniStudent?<br><br></div>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Remember working on that assignment on Compass2g? 
+		Then you realize you need to check your homework
+		on Moodle but since they are independent websites,
+		you need to go to Moodle on a separate tab, and
+		then log in to check the homework. In comes	illiniStudent,
+		a student made website aimed to ease the lives of
+		students through one simple login of NetID and Password
+		to access an integration of the	UIUC websites
+		and an interactive calendar to remind you of upcoming
+		homework that is due.<br><br><br>
+        </h3>
+		<h3 id="about2">
+		<div id="about1">What can I do on this website?<br><br></div>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Currently the website is under construction. However, when
+		the website is finished, it is expected to have the following functions:<br><br>
+		<ul>
+		<li>Fully functioning account system allowing for personalized tasks</li>
+		<li>A hub for all the UIUC websites so you can easily access them while staying on the same page</li>
+		<li>Calendar to help organize tasks</li>
+		<li>And much more!</li>
+		</ul>
+        </h3>
     <div class="container">
        
     </div>
