--- a/web/Home.html
+++ b/web/Home.html
@@ -62,7 +62,7 @@ function Login()
                 
             });
             setTimeout(function(){
-                window.location.href="main.html"}, 1000);
+                window.location.href="Main.html"}, 1000);
         }
     </script>
     <script>
