--- a/web/Home.html
+++ b/web/Home.html
@@ -71,7 +71,7 @@ function Login()
             var newuser=$("#newName").val();
             var newpass=$("#newPassword").val();
             var newnetid=$("#newNetID").val();
-            var newemail=$("newEmail").val();
+            var newemail=$("#newEmail").val();
             $.ajax({
                 dataType:"json",
                 type: "GET",
