minor fix on line 121, a to A
changed a to A

--- a/web/Home.html
+++ b/web/Home.html
@@ -118,7 +118,7 @@ $("#sign-up").click(function() {
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="about.html">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="Help.html">Help</a></li>
                 <li><a href="#">Supported Sites</a></li>
             </ul>
