minor fix on line 70, a to A

--- a/web/Main.html
+++ b/web/Main.html
@@ -67,7 +67,7 @@
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="about.html">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="Resources.html">Resources</a></li>
                 <li><a href="Profile.html">Profile</a></li>
