--- a/web/Profile.html
+++ b/web/Profile.html
@@ -24,7 +24,7 @@
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="about.html">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="#">Help</a></li>
                 <li><a href="#">Resources</a></li>
                 <li><a href="Profile.html">Profile</a></li>
