--- a/web/Home.html
+++ b/web/Home.html
@@ -135,7 +135,7 @@ $("#sign-up").click(function() {
             <input class="form-control" type="text" placeholder="Username" id="Username"></input>
             </div>
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Password" id="Password"></input>
+            <input class="form-control" type="password" placeholder="Password" id="Password"></input>
             </div>
             <!--delete line 47 and 49 after presentation-->
             <!--a href="Main.html"-->
@@ -153,7 +153,7 @@ $("#sign-up").click(function() {
             <input class="form-control" type="text" placeholder="Username" id="newName"></input>
             </div>
             <div class="form-group">
-            <input class="form-control" type="text" placeholder="Password" id="newPassword"></input>
+            <input class="form-control" type="password" placeholder="Password" id="newPassword"></input>
             </div>
             <div class="form-group">
             <input class="form-control" type="text" placeholder="Email" id="newEmail"></input>
