--- a/web/Main.html
+++ b/web/Main.html
@@ -148,7 +148,10 @@
      for (var i=0; i<a[named].length;i++)
             {
                 var obj=a[named][i].assign_name;
-                var assign={title: obj, done: false};
+                var objb=a[named][i].description;
+                var objc=a[named][i].due_date;
+                var objd=a[named][i].due_time;
+                var assign={title: obj+' - '+objb+ ' - Due: '+objc+ ' - At: '+objd, done: false};
                 arr[i]=assign;
                 
             }
