--- a/web/About.html
+++ b/web/About.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+<script src="js/js.cookie.js"></script>
+<script>function hide(){
+    if(Cookies.get('user')==null){
+    document.getElementById("profile").setAttribute('style','display:none');
+    document.getElementById("setting").setAttribute('style','display:none');
+    document.getElementById("logout").setAttribute('style','display:none');
+}
+}</script>
+<script>
+    function Delete()
+    {
+        Cookies.remove('user', { path: '/' })
+    }
+</script>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +25,12 @@
     <link rel="stylesheet" href="css/flatlybootstrap.css">
 </head>
     
-<body>
+<body onload='hide()' >
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -24,9 +38,12 @@
             </div>
         <div>
             <ul class="nav navbar-nav">
-                <li><a href="about.html">About</a></li>
-                <li><a href="Help.html">Help</a></li>
-                <li><a href="#">Supported Sites</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="Resources.html">Resources</a></li>
+                <li id = "profile"><a href="Profile.html">Profile</a></li>
+                <li id = "setting"><a href="#">Settings</a></li>
+                <li id = "logout"><a href="Home.html" onclick="Delete()">Log Out</a></li>
             </ul>
         </div>
     </nav>
