--- a/web/Home.html
+++ b/web/Home.html
@@ -125,7 +125,7 @@ function Login()
                 }
                 else if(data!="Error -1: user exists. Please contact for help." && (data!="missing user parameter" || data!="missing pass parameter" || data!="missing email parameter" || data!="missing netid"))
                 {
-                    window.alert("New User Created, Sign in above");
+                    window.location.href="Register.html"
                 }
                 
                 
