Delete name cookie on logout

--- a/web/Main.html
+++ b/web/Main.html
@@ -114,7 +114,8 @@
     <script>
     function Delete()
         {
-            Cookies.remove('user', { path: '/' })
+            Cookies.remove('user', { path: '/' });
+            Cookies.remove('name', { path: '/' });
         }
     </script>
    
