--- a/web/About.html
+++ b/web/About.html
@@ -11,7 +11,8 @@
 <script>
     function Delete()
     {
-        Cookies.remove('user', { path: '/' })
+        Cookies.remove('user', { path: '/' });
+        Cookies.remove('name', { path: '/' });
     }
 </script>
 
