--- a/web/Resources.html
+++ b/web/Resources.html
@@ -23,7 +23,8 @@
     <script>
     function Delete()
         {
-            Cookies.remove('user', { path: '/' })
+            Cookies.remove('user', { path: '/' });
+            Cookies.remove('name', { path: '/' });
         }
     </script>
     
