Turn off unneeded outputs

--- a/web/Confirm.html
+++ b/web/Confirm.html
@@ -31,7 +31,7 @@
 
             success:function(data) {
 
-                console.log(data);
+                //console.log(data);
                 if (data == "success") {
                     document.getElementById("confirm1").setAttribute('style','visibility:visibile');
                     document.getElementById("about1").setAttribute('style','visibility:visibile');
