--- a/web/Home.html
+++ b/web/Home.html
@@ -67,7 +67,7 @@ function Login()
                success: function(data)
                 {
                     var cool=data;
-                    console.log(cool);
+                    //console.log(cool);
                     if(cool=="Error: no id found")
                     {
                         alert("Incorrect username/password");
@@ -78,7 +78,7 @@ function Login()
                     {
                         Cookies.json=true;
                        Cookies.set('user', data, {path: '/'});
-                        console.log(Cookies.get());
+                        //console.log(Cookies.get());
                         Cookies.set('name', user, {path: '/'});
                         window.location.href="Main.html";
                        // document.cookie="username=valid"
@@ -114,7 +114,7 @@ function Login()
             success:function(data)
             {
                 var cool=data;
-                console.log(cool);
+                //console.log(cool);
                 if(data=="Error -1: user exists. Please contact for help.")
                    {
                        window.alert("Choose new username/password");
