--- a/web/Resources.html
+++ b/web/Resources.html
@@ -46,8 +46,8 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="About.html">About</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Resources</a></li>
+                
+                <li><a href="Resources.html">Resources</a></li>
                 <li><a href="Profile.html">Profile</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="Home.html" onclick="Delete()">Log Out</a></li>
